--- a/React/mon_frontend_perso/src/static/css/App.css
+++ b/React/mon_frontend_perso/src/static/css/App.css
@@ -1,5 +1,11 @@
 body{
+  background-color: #282c34 !important;
+}
+
+.container {
   background-color: #282c34;
+  min-width: 100% !important;
+  text-align: left;
 }
 
 .App {
@@ -8,6 +14,7 @@ body{
 
 .App-logo {
   height: 40vmin;
+  margin: 50px;
 }
 
 .App-header {
